fix: align items tag form

--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -117,6 +117,8 @@ p {
 form {
   display:        flex;
   flex-direction: column;
+  align-items:    flex-start;
+  width:          100%;
   label {
     margin-bottom: 20px;
     &:nth-child(2) {
